Fixed an issue where long URLs would break topic views on mobile, fixes #204.

--- a/app/assets/stylesheets/objects/comments.scss
+++ b/app/assets/stylesheets/objects/comments.scss
@@ -77,6 +77,10 @@
 .comment-body {
   @include remove-last-child-bottom-margin;
   padding: 10px;
+
+  a {
+    word-wrap: break-word;
+  }
 }
 
 .comment-control {
